# serializer version: 1
# name: test_event_entity[1-closed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'closed',
        'created',
        'deleted',
        'modified',
        'moved',
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Closed',
    'platform': 'folder_watcher',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'closed',
    'unique_id': '1-closed',
    'unit_of_measurement': None,
  })
# ---
# name: test_event_entity[1-closed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'event_type': 'closed',
      'event_types': list([
        'closed',
        'created',
        'deleted',
        'modified',
        'moved',
      ]),
    }),
    'context': <ANY>,
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2022-04-19T10:31:02.000+00:00',
  })
# ---
# name: test_event_entity[1-created-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'closed',
        'created',
        'deleted',
        'modified',
        'moved',
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Created',
    'platform': 'folder_watcher',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'created',
    'unique_id': '1-created',
    'unit_of_measurement': None,
  })
# ---
# name: test_event_entity[1-created-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'event_type': 'created',
      'event_types': list([
        'closed',
        'created',
        'deleted',
        'modified',
        'moved',
      ]),
    }),
    'context': <ANY>,
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2022-04-19T10:31:02.000+00:00',
  })
# ---
# name: test_event_entity[1-deleted-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'closed',
        'created',
        'deleted',
        'modified',
        'moved',
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Deleted',
    'platform': 'folder_watcher',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'deleted',
    'unique_id': '1-deleted',
    'unit_of_measurement': None,
  })
# ---
# name: test_event_entity[1-deleted-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'event_type': None,
      'event_types': list([
        'closed',
        'created',
        'deleted',
        'modified',
        'moved',
      ]),
    }),
    'context': <ANY>,
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_event_entity[1-modified-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'closed',
        'created',
        'deleted',
        'modified',
        'moved',
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Modified',
    'platform': 'folder_watcher',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'modified',
    'unique_id': '1-modified',
    'unit_of_measurement': None,
  })
# ---
# name: test_event_entity[1-modified-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'event_type': 'modified',
      'event_types': list([
        'closed',
        'created',
        'deleted',
        'modified',
        'moved',
      ]),
    }),
    'context': <ANY>,
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2022-04-19T10:31:02.000+00:00',
  })
# ---
# name: test_event_entity[1-moved-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'closed',
        'created',
        'deleted',
        'modified',
        'moved',
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Moved',
    'platform': 'folder_watcher',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'moved',
    'unique_id': '1-moved',
    'unit_of_measurement': None,
  })
# ---
# name: test_event_entity[1-moved-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'event_type': None,
      'event_types': list([
        'closed',
        'created',
        'deleted',
        'modified',
        'moved',
      ]),
    }),
    'context': <ANY>,
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
